<resources>
    <string name="app_name">Teammates</string>
    <string name="title_activity_main_page_after_login">MainPageAfterLoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Database Nodes-->
    <string name="dbnode_students">students</string>
    <string name="dbnode_coordinators">coordinators</string>
    <string name="dbnode_universities">universities</string>
    <string name="dbnode_majors">majors</string>
    <string name="dbnode_subjects">subjects</string>
    <string name="dbnode_chatrooms">chatrooms</string>
    <string name="default_image">https://www.freewebmentor.com/default-avatar.png</string>
    <string name="passwordDonotMatch">Password do not match</string>
    <string name="FilloutAllFOrms">Fill out all forms</string>
    <string name="loginToContinue">Login to Continue</string>
    <string name="smthngWentWrong">Something Went Wrong</string>
    <string name="EdityourSkills">Edit your Skills</string>
    <string name="EdityourIn">Edit your Interest</string>
    <string name="edityourbio">Edit your Bio</string>
    <string name="defaultName">Default Name</string>
    <string name="DefaultAge">Enter Age</string>
    <string name="newCOnnection">You have a new connection from</string>
    <string name="matchClickhere">There has been a match! Click to here see!</string>
    <string name="YouAreNowSignedOut">You are now Signed Out!</string>
    <string name="your_university_name">Your University Name</string>
    <string name="your_major_name">Your Major Name</string>
    <string name="your_subject_name">Your Subject Name</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="create_an_account">Create An Account</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_student_id">Enter Your Student ID</string>
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_age">Your Age</string>
    <string name="your_bio">Your Bio</string>
    <string name="your_skills">Your Skills</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="your_interest">Your Interest</string>
    <string name="form_better_teams">Form Better Teams</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_address">Email Address</string>
    <string name="interest">Interest</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_to_continue">Please Sign In To Continue</string>
    <string name="enter_your_email_addressd">Enter Your Email Address</string>
    <string name="enter_your_passwordd">Enter Your Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_one">Don\'t Have One?</string>
    <string name="create_one">Create One</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="bio">Bio</string>
    <string name="skills">Skills</string>
    <string name="interest">Interest</string>
    <string name="sharad_ghimire">Sharad Ghimire</string>
    <string name="addd">add</string>
    <string name="open_from_files">Open From Files</string>
    <string name="open_camera">Open Camera</string>
    <string name="match_name">Match Name</string>
    <string name="match_id">Match ID</string>
    <string name="welcome_to_teammates">Welcome to Teammates</string>
    <string name="profile">Profile</string>
    <string name="chat_history">Chat History</string>
    <string name="team">Team</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_university_details">Add University Details</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>


    <!--Database Fields-->
    <!--<string name="field_name">name</string>-->
    <!--<string name="field_"></string>-->
</resources>


