<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/person_clip_art"
            android:title="@string/profile" />
        <item
            android:id="@+id/chat"
            android:icon="@drawable/chat"
            android:title="@string/chat_history" />
        <item
            android:id="@+id/teams"
            android:icon="@drawable/team"
            android:title="@string/team" />
        <item
            android:id="@+id/editProfile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/uni"
            android:icon="@drawable/uni"
            android:title="@string/add_university_details" />

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/signOut"
                android:icon="@drawable/lock_password"
                android:title="@string/sign_out">
            </item>

        </menu>
    </item>


</menu>
