<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CreateAccountActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="200sp"
        android:layout_height="142dp"
        android:layout_gravity="center"
        android:src="@drawable/teammates" />


    <!--Sign In Text View-->
    <TextView
        android:layout_marginBottom="1dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--Enter your Email Address -->
    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/createAccountEmailET"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/person_clip_art"
        android:hint="@string/enter_your_email_address" />
    <EditText
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/createAccountPasswordET"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/lock_password"
        android:hint="@string/enter_your_password" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/createAccountPasswordET2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/lock_password"
        android:hint="@string/confirm_password" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/createAccountStudentIDET"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/lock_password"
        android:hint="@string/enter_your_student_id" />

    <!--Sign in Button-->
    <Button
        android:layout_gravity="center"
        android:id="@+id/register"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/pBarSignUp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content" />

</LinearLayout>