<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:orientation="vertical"
    android:background="@color/grey"
    android:padding="20sp">



    <android.support.v7.widget.CardView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameViewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@android:color/background_dark"
                android:textSize="20dp" />


            <Button
                android:layout_marginTop="40dp"
                android:id="@+id/editProfileBtn"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:onClick="editProfileBtnHandler"
                android:text="@string/edit_profile"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePictureViewProfile"
                android:layout_width="120dp"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:src="@drawable/handshake" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center|left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/email" />

                <TextView
                    android:id="@+id/emailAddressViewProfile"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address" />
            </LinearLayout>

            <LinearLayout
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/team" />

                <TextView
                    android:id="@+id/bioViewProfile"
                    android:layout_marginLeft="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bio" />
            </LinearLayout>

            <LinearLayout
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_today" />

                <TextView
                    android:id="@+id/skillsViewProfile"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Skills" />
            </LinearLayout>

            <LinearLayout
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_play" />

                <TextView
                    android:id="@+id/interesttViewProfile"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interest" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>





</LinearLayout>